--- a/css/anime.css
+++ b/css/anime.css
@@ -5,7 +5,7 @@
 .sunset{
  position: absolute;
     height: 500px;   
-width: 1809px;
+width: 1825px;
     
   -webkit-animation-name: sky; /* Chrome, Safari, Opera */
     -webkit-animation-duration: 90s; /* Chrome, Safari, Opera */
@@ -41,7 +41,7 @@ width: 1809px;
 .grass{
   position:absolute;  
   background-color:green;
-  width:1497px;
+  width:1506px;
   height:470px;
   margin-top:284px;
   margin-left:-123px;
@@ -60,7 +60,7 @@ width: 1809px;
   background: #b30000;
     box-shadow: 0px 0px 9px 9px orange;
     border-radius:1% ;
-    width:1798px;
+    width:1813px;
     height:274px;
     margin-top:476px;
     margin-left:-996px;
@@ -80,7 +80,7 @@ div .w3-spin{
   border-radius:100%;
   width:400px;
   height:400px;
-  margin-left:800px;
+  margin-left:60%;
   z-index:-1;
   
   -webkit-animation-name: sun; /* Chrome, Safari, Opera */
@@ -424,6 +424,454 @@ div .w3-spin{
     to {background-color: yellow;}
 }
 
+
+.dome4{
+  position:absolute;
+  border:1px solid #6f6f6f ;
+  border-radius:100%;
+  width:20px;
+  height:20px;
+  margin-top:262px;
+  margin-left:947px;
+  background-color:#cfcfcf;
+  opacity: 0.3;
+  filter: alpha(opacity=60);
+  z-index:-1;
+}
+
+.antenna4{
+  position:absolute;
+  border:1px solid #262626;
+  width:5px;
+  height:auto;
+  transform:rotate(90deg);
+  margin-top:258px;
+  margin-left:954px;
+}
+
+.flasher4{
+  position:absolute;
+  width:3px;
+  height:3px;
+  border:1px solid black;
+  border-radius:100px;
+  margin-left:954.8px;
+  margin-top:254px;
+  
+   -webkit-animation-name: flasher; /* Chrome, Safari, Opera */
+    -webkit-animation-duration: 1s; /* Chrome, Safari, Opera */
+    animation-name: flasher;
+    animation-duration: 1s;
+   animation-iteration-count: infinite;
+  
+}
+
+
+
+.dome5{
+  position:absolute;
+  border:1px solid #6f6f6f ;
+  border-radius:100%;
+  width:70px;
+  height:70px;
+  margin-top:232px;
+  margin-left:1047px;
+  background-color:#cfcfcf;
+  opacity: 0.3;
+  filter: alpha(opacity=60);
+  z-index:-1;
+}
+
+.antenna5{
+  position:absolute;
+  border:1px solid #262626;
+  width:15px;
+  height:auto;
+  transform:rotate(90deg);
+  margin-top:224px;
+  margin-left:1072px;
+}
+
+.flasher5{
+  position:absolute;
+  width:3px;
+  height:3px;
+  border:1px solid black;
+  border-radius:100px;
+  margin-left:1078px;
+  margin-top:213px;
+  
+   -webkit-animation-name: flasher; /* Chrome, Safari, Opera */
+    -webkit-animation-duration: 1s; /* Chrome, Safari, Opera */
+    animation-name: flasher;
+    animation-duration: 1s;
+   animation-iteration-count: infinite;
+  
+}
+
+
+/**************************************************/
+
+#island{
+    position: absolute;
+    margin-top:42px;
+    margin-left:23px;
+    
+    -webkit-animation-name: island; /* Chrome, Safari, Opera */
+    -webkit-animation-duration: 40s; /* Chrome, Safari, Opera */
+    animation-name: island;
+    animation-duration: 45s;
+   animation-iteration-count: infinite;
+     animation-direction: alternate;
+  transition-timing-function:ease-out;
+  
+}
+
+
+/* Chrome, Safari, Opera */
+@-webkit-keyframes island{
+    0%   { left: 1100px; top: 100px;}
+    25%  { left: 10%; top: 90px;}
+    50%  { left: 20%; top: 80px;}
+    75%  { left: 30%; top: 70px;}
+    100% { left: 40%; top: 60px;}
+}
+
+@keyframes island {
+     0%   { left: 0px; top: 0px;}
+    25%  { left: -1004px; top: -110px;}
+    50%  { left: 212px; top: -222px;}
+    75%  { left: -42px; top: -320px;}
+    100% { left: 20px; top: 0px;}
+}
+
+.main_building{
+    position: absolute;
+    border:2px ridge Darkgrey;
+    border-top-left-radius:25%;
+    border-top-right-radius:25%;
+    background-color:Darkgrey;
+    width:32px;
+    height:29px;
+    margin-top:200px;
+    margin-left:980px;
+    z-index: -1;
+}
+
+.main_door{
+    position: absolute;
+    border:2px solid black;
+    border-top-left-radius:50%;
+    border-top-right-radius:50%;
+    background-color:brown;
+    width:12px;
+    height:12px;
+    margin-top:215px;
+    margin-left:990px;
+    z-index: -1;
+}
+
+.tower_bottom{
+    position: absolute;
+    border:1px ridge black;
+    background-color:grey;
+    width:9px;
+    height:39px;
+    margin-top:190px;
+    margin-left:973px;
+    z-index: -1;
+}
+
+.tower_top{
+    position: absolute;
+    border:1px solid black;
+    border-radius: 100%;
+   background-color:#cfcfcf;
+  opacity: 0.3;
+  filter: alpha(opacity=60);
+    width:20px;
+    height:20px;
+    margin-top:170px;
+    margin-left:967px;
+    z-index: -1;
+    
+       -webkit-animation-name: tower; /* Chrome, Safari, Opera */
+    -webkit-animation-duration: 15s; /* Chrome, Safari, Opera */
+    animation-name: tower;
+    animation-duration: 15s;
+   animation-iteration-count: infinite;
+    
+}
+
+
+
+.tower_bottom_right{
+    position: absolute;
+    border:1px ridge black;
+    background-color:grey;
+    width:9px;
+    height:60px;
+    margin-top:170px;
+    margin-left:1013px;
+    z-index: -1;
+}
+
+.tower_top_right{
+    position: absolute;
+    border:1px solid black;
+    border-radius: 100%;
+   background-color:#cfcfcf;
+  opacity: 0.3;
+  filter: alpha(opacity=60);
+    width:20px;
+    height:20px;
+    margin-top:150px;
+    margin-left:1007px;
+    z-index: -1;
+    
+       -webkit-animation-name: tower; /* Chrome, Safari, Opera */
+    -webkit-animation-duration: 10s; /* Chrome, Safari, Opera */
+    animation-name: tower;
+    animation-duration: 10s;
+   animation-iteration-count: infinite;
+}
+
+/* Chrome, Safari, Opera */
+@-webkit-keyframes tower {
+    from {background-color: blue;}
+    to {background-color: lawngreen;}
+    from {background-color: yellow;}
+    to {background-color: purple;}
+      from {background-color: red;}
+    to {background-color: orange;}
+    from {background-color: lavender;}
+    to {background-color: deeppink;}
+}
+
+/* Standard syntax */
+@keyframes tower {
+     from {background-color: blue;}
+    to {background-color: lawngreen;}
+    from {background-color: yellow;}
+    to {background-color: purple;}
+      from {background-color: red;}
+    to {background-color: orange;}
+    from {background-color: lavender;}
+    to {background-color: deeppink;}
+}
+
+
+.spike{
+  position:absolute;
+  margin-left:970px;
+  margin-top:230px;
+	width: 0; 
+	height: 0; 
+	border-left: 11px solid transparent;
+	border-right: 11px solid transparent;
+	border-bottom: 55px solid #804000;
+  z-index:-1;
+      /* Rotate div */
+    -ms-transform: rotate(180deg); /* IE 9 */
+    -webkit-transform: rotate(180deg); /* Chrome, Safari, Opera */
+    transform: rotate(180deg)
+    
+} 
+
+.LrgSpike{
+  position:absolute;
+    margin-left:990px;
+  margin-top:230px;
+	width: 0; 
+	height: 0; 
+	border-left:22px solid transparent;
+	border-right: 22px solid transparent;
+	border-bottom: 66px solid #804000;
+  z-index:-1;
+    
+      /* Rotate div */
+    -ms-transform: rotate(180deg); /* IE 9 */
+    -webkit-transform: rotate(180deg); /* Chrome, Safari, Opera */
+    transform: rotate(180deg)
+    
+}
+.moss{
+  position:absolute;
+  margin-left:972px;
+  margin-top:225px;
+	width: 0; 
+	height: 0; 
+	border-left: 5px solid transparent;
+	border-right: 5px solid transparent;
+	border-bottom: 5px solid #00ff00;
+  z-index:-1;
+    
+    
+     -webkit-animation-name: moss; /* Chrome, Safari, Opera */
+    -webkit-animation-duration: 1s; /* Chrome, Safari, Opera */
+    animation-name: moss;
+    animation-duration: 1s;
+   animation-iteration-count: infinite;
+}
+
+.moss2{
+  position:absolute;
+  margin-left:1023px;
+  margin-top:225px;
+	width: 0; 
+	height: 0; 
+	border-left: 5px solid transparent;
+	border-right: 5px solid transparent;
+	border-bottom: 5px solid #00ff00;
+  z-index:-1;  
+    
+    
+     -webkit-animation-name: moss; /* Chrome, Safari, Opera */
+    -webkit-animation-duration: 1s; /* Chrome, Safari, Opera */
+    animation-name: moss;
+    animation-duration: 1s;
+   animation-iteration-count: infinite;
+}
+
+/* Chrome, Safari, Opera */
+@-webkit-keyframes moss {
+    from {background-color: blue;}
+    to {background-color: lawngreen;}
+}
+
+/* Standard syntax */
+@keyframes moss {
+    from {background-color: lawngreen;}
+    to {background-color: blue;}
+}
+
+/***Clouds****/
+
+
+#MmoreClouds{
+  position:absolute;
+  margin-top:280px;
+    margin-left:973px;
+     opacity: 0.9;
+  filter: alpha(opacity=20);
+  z-index:-1;
+     
+   
+  -webkit-animation: island 45s infinite; /* Chrome, Safari, Opera */
+    -webkit-animation-direction: alternate; /* Chrome, Safari, Opera */
+    animation: island  infinite;
+  animation-duration:45.01s;
+    animation-direction: alternate;
+  transition-timing-function:ease-out;
+}
+/* Chrome, Safari, Opera */
+@-webkit-keyframes island{
+ 0%   { left: 1100px; top: 100px;}
+    25%  { left: 10%; top: 90px;}
+    50%  { left: 20%; top: 80px;}
+    75%  { left: 30%; top: 70px;}
+    100% { left: 40%; top: 60px;}
+}
+
+@keyframes island {
+    0%   { left: 0px; top: 0px;}
+    25%  { left: -904px; top: -210px;}
+    50%  { left: -512px; top: -222px;}
+    75%  { left: -42px; top: -320px;}
+    100% { left: 20px; top: 0px;}
+}
+
+
+
+.cc{
+  position:absolute;
+  border:1px solid white;
+  width:100px;
+  height:40px;
+  border-radius:100%;
+  margin-left:50%;
+  background-color:whitesmoke;
+  z-index:-1;  
+}
+
+
+.ll{
+  position:absolute;
+  border:1px solid white;
+  width:50px;
+  height:50px;
+  border-radius:100%;
+  margin-left:50%;
+  margin-top:-3px;
+  background-color:whitesmoke;
+  z-index:1;  
+
+ -ms-transform: rotate(110deg);
+  /* IE 9 */
+  -webkit-transform: rotate(110deg);
+  /* Chrome, Safari, Opera */
+  transform: rotate(110deg);
+
+}
+
+.oo{
+  position:absolute;
+  border:1px solid white;
+  width:50px;
+  height:50px;
+  border-radius:100%;
+  margin-left:48px;
+  margin-top:-3px;
+  background-color:whitesmoke;
+  z-index:-1;  
+
+}
+
+.uu{
+  position:absolute;
+  border:1px solid white;
+  width:60px;
+  height:70px;
+  border-radius:100%;
+  margin-left:15px;
+  margin-top:-13px;
+  background-color:whitesmoke;
+  z-index:-1;  
+
+}
+
+
+.dd{
+  position:absolute;
+  border:1px solid white;
+  width:20px;
+  height:20px;
+  border-radius:100%;
+  margin-left:20px;
+  margin-top:-13px;
+  background-color:whitesmoke;
+  z-index:-1;  
+
+}
+
+.ss{
+  position:absolute;
+  background-color: white;
+  border:1px solid white;
+  width:20px;
+  height:20px;
+  border-radius:100%;
+  margin-left:57px;
+  margin-top:35px;
+  background-color:whitesmoke;
+  z-index:-1;  
+
+}
+
+/***************************************************/
+
+
+
 #earth{
   position:absolute;
 margin-top:193px;
@@ -480,6 +928,8 @@ margin-top:193px;
 #clouds{
   position:absolute;
   margin-top:103px;
+    opacity: 0.9;
+  filter: alpha(opacity=20);
     z-index: 2;
   
    
@@ -516,7 +966,7 @@ margin-top:193px;
   height:40px;
   border-radius:100%;
   margin-left:50%;
-  background-color:white;
+  background-color:whitesmoke;
   z-index:0;  
 }
 
@@ -529,7 +979,7 @@ margin-top:193px;
   border-radius:100%;
   margin-left:50%;
   margin-top:-3px;
-  background-color:white;
+  background-color:whitesmoke;
   z-index:1;  
 
  -ms-transform: rotate(110deg);
@@ -548,7 +998,7 @@ margin-top:193px;
   border-radius:100%;
   margin-left:48px;
   margin-top:-3px;
-  background-color:white;
+  background-color:whitesmoke;
   z-index:-1;  
 
 }
@@ -561,7 +1011,7 @@ margin-top:193px;
   border-radius:100%;
   margin-left:15px;
   margin-top:-13px;
-  background-color:white;
+  background-color:whitesmoke;
   z-index:-1;  
 
 }
@@ -575,7 +1025,7 @@ margin-top:193px;
   border-radius:100%;
   margin-left:20px;
   margin-top:-13px;
-  background-color:white;
+  background-color:whitesmoke;
   z-index:-1;  
 
 }
@@ -589,7 +1039,7 @@ margin-top:193px;
   border-radius:100%;
   margin-left:57px;
   margin-top:35px;
-  background-color:white;
+  background-color:whitesmoke;
   z-index:-1;  
 
 }
@@ -597,6 +1047,8 @@ margin-top:193px;
 #moreClouds{
   position:absolute;
   margin-top:103px;
+    opacity: 0.9;
+  filter: alpha(opacity=20);
   z-index:2;
      
    
@@ -633,7 +1085,7 @@ margin-top:193px;
   height:40px;
   border-radius:100%;
   margin-left:50%;
-  background-color:white;
+  background-color:whitesmoke;
   z-index:-1;  
 }
 
@@ -646,7 +1098,7 @@ margin-top:193px;
   border-radius:100%;
   margin-left:50%;
   margin-top:-3px;
-  background-color:white;
+  background-color:whitesmoke;
   z-index:1;  
 
  -ms-transform: rotate(110deg);
@@ -665,7 +1117,7 @@ margin-top:193px;
   border-radius:100%;
   margin-left:48px;
   margin-top:-3px;
-  background-color:white;
+  background-color:whitesmoke;
   z-index:-1;  
 
 }
@@ -678,7 +1130,7 @@ margin-top:193px;
   border-radius:100%;
   margin-left:15px;
   margin-top:-13px;
-  background-color:white;
+  background-color:whitesmoke;
   z-index:-1;  
 
 }
@@ -692,7 +1144,7 @@ margin-top:193px;
   border-radius:100%;
   margin-left:20px;
   margin-top:-13px;
-  background-color:white;
+  background-color:whitesmoke;
   z-index:-1;  
 
 }
@@ -706,7 +1158,7 @@ margin-top:193px;
   border-radius:100%;
   margin-left:57px;
   margin-top:35px;
-  background-color:white;
+  background-color:whitesmoke;
   z-index:-1;  
 
 }
