--- a/css/main.css
+++ b/css/main.css
@@ -59,6 +59,9 @@ header {
   margin: 0 0 30px 0;
   padding: 5px 0 0 0;
   width: 100%;
+  border: #599a68;
+  opacity:.5;
+  background:#272646;
 
 }
 
@@ -123,18 +126,10 @@ padding-top: 50px;
   
     }
 
-.social-icon {
-    color:black;
-  width: 20px;
-  height: 20px;
-  margin-top:543px;
-  margin-left:323px;
-  z-index:5;
-}
 
 .regs{
    color:whitesmoke;
-    top:440px;
+    top:430px;
     margin-left:20%;
     width:200px;;
     height:15px;
@@ -224,10 +219,6 @@ body {
 
 
 /* green header*/
-header {
-  border: #599a68;
-  background:#339933;
-}
 
 /* nav background for mobile*/
 nav {
