--- a/css/anime.css
+++ b/css/anime.css
@@ -42,23 +42,18 @@ width: 100%;
   position:absolute;  
   background-color:green;
   width:100%;
-  height:470px;
-  margin-top:284px;
-  margin-left:-500px;
+  height:580px;
+  margin-top:285px;
+  margin-left:-350px;
 }
 
-#nature{
-    position: absolute;
-    margin-top:233px;
-    margin-left:-123px;
-    height:100px;
-    width:200px;
-}
+
+
 
 .dirt{
     border: #599a68;
   background:#272646;
-    box-shadow: 0px 0px 9px 9px #599a68;
+    box-shadow: 0px 0px 9px 9px #00ff00;
     border-radius:1% ;
     width:1823px;
     height:274px;
@@ -66,6 +61,7 @@ width: 100%;
     margin-left:-952px;
     z-index: 4;
 }
+
 
 .legend_left{
     position: absolute;
@@ -82,11 +78,12 @@ width: 100%;
     border:2px dashed;
       box-shadow: 0px 0px 2px 1px #00ff00;
     width:255px;
-    margin-left: 1230px;
+    margin-left: 1310px;
     margin-top: 135px;
     transform:rotate(90deg);
     z-index: 5;
 }
+
 
 #sun{
   position:absolute;
@@ -256,8 +253,8 @@ width: 100%;
   border-top-right-radius:100%;
   border-top-color: #0066ff;
   width:1771px;
-  height:480px;
-  margin-top:446px;
+  height:580px;
+  margin-top:460px;
   z-index:1;
   -webkit-animation-name: water; /* Chrome, Safari, Opera */
     -webkit-animation-duration: 4s; /* Chrome, Safari, Opera */
@@ -295,24 +292,7 @@ width: 100%;
   z-index: 3;
 }
 
-/**********Wave FX************/
 
-#ocean{
-  position:;
-  
-}
-
-.wave1{
-  position:absolute;
-  border:1px solid lightblue;
-  width:100px;
-  height:50px;
-  margin-top:503px;
-  margin-left:60px;
-  z-index:3;
-  /*****************/
-  
-}
 
 .shore{
   position:absolute;
@@ -321,11 +301,80 @@ width: 100%;
   border-top-right-radius:100%;
   border-top-color: #0066ff;
   width:1731px;
-  height:480px;
-  margin-top:449px;
+  height:590px;
+  margin-top:460px;
   margin-left:76px;
   z-index: 1;    
 }
+
+
+
+
+/*******
+TRAINS
+********/
+
+#cars{
+    position: absolute;
+     -webkit-animation: carmove 10s infinite; /* Chrome, Safari, Opera */
+    -webkit-animation-direction: alternate; /* Chrome, Safari, Opera */
+    animation: carmove  infinite;
+    animation-duration:45s;
+    animation-direction: alternate;
+  transition-timing-function:ease-out;
+    z-index: 0;
+}
+
+/*
+/* Chrome, Safari, Opera */
+@-webkit-keyframes carmove {
+    0%   { left: 0px; top: 0px;}
+    25%  { left: -4%; top: 0px;}
+    50%  { left: 12%; top: 0px;}
+    75%  { left: -122%; top: 0px;}
+    100% { left: 20%; top: 0px;}
+}
+
+@keyframes carmove {
+    0%   { left: 0px; top: 1px;}
+    25%  { left: -64%; top: -1px;}
+    50%  { left: 6%; top: 2px;}
+    75%  { left: -22%; top: -1px;}
+    100% { left: 20%; top: 1px;}
+}
+
+
+
+
+
+.car_one{
+    position: absolute;
+    background-color: orange;
+    border:1px solid #262626;
+    border-top-left-radius: 100px;
+    border-top-right-radius: 100px;
+    margin-left:123px;
+    width:50px;
+    height: 50px;
+    z-index: 5;
+}
+
+.car_dome{
+   position:absolute;
+  border:1px solid black;
+  border-top-left-radius:100%;
+  border-top-right-radius:100%;
+  width: 40px;
+  height: 5px;
+  margin-top:565px;
+  margin-left:247px;
+  background-color:#cfcfcf;
+  opacity: 0.6;
+  filter: alpha(opacity=60);
+  z-index:2; 
+}
+
+/************/
 
 #domes{
  position:absolute;
@@ -902,7 +951,7 @@ margin-top:193px;
 	border-left: 24px solid transparent;
 	border-right: 24px solid transparent;
 	border-bottom: 24px solid #804000;
-  z-index:1;
+  z-index:-1;
 }
 
 .largeMountain{
@@ -1332,4 +1381,46 @@ position:absolute;
 @keyframes phlashing {
     from {background-color: green;}
     to {background-color: orange;}
+}
+
+
+
+/****************
+Draggbles
+*********************/
+
+#draggable{
+    position:absolute;
+    margin-left:123px;
+    top:692px;
+    z-index: 5;
+}
+
+
+.mountain_move{
+    position:absolute;
+  margin-left:1.5rem;
+  margin-top:170px;
+	width: 0; 
+	height: 0; 
+	border-left: 100px solid transparent;
+	border-right: 100px solid transparent;
+	border-bottom: 100px solid #804000;
+  z-index:5;
+}
+.snow_move{
+  position:absolute;
+  margin-left:109px;
+  margin-top:170px;
+	width: 0; 
+	height: 0; 
+	border-left: 15px solid transparent;
+	border-right: 15px solid transparent;
+	border-bottom: 15px solid white;
+  z-index:5;
+}
+
+#drag{
+    position: absolute;
+    z-index: 5;
 }
