--- a/css/anime.css
+++ b/css/anime.css
@@ -52,8 +52,8 @@ width: 100%;
 
 .dirt{
     border: #599a68;
-  background:#272646;
-    box-shadow: 0px 0px 9px 9px #00ff00;
+    background:#272646;
+    box-shadow: 0px 0px 9px 9px #265926;
     border-radius:1% ;
     width:1823px;
     height:274px;
@@ -66,7 +66,7 @@ width: 100%;
 .legend_left{
     position: absolute;
     border:2px dashed;
-      box-shadow: 0px 0px 2px 1px #00ff00;
+    box-shadow: 0px 0px 2px 1px #00ff00;
     width:255px;
     margin-left: 223px;
     margin-top: 135px;
@@ -285,9 +285,8 @@ width: 100%;
 .water1{
   position:absolute;
    width:2%;
-  height:470px;
+  height:525px;
   margin-top:446px;
-  z-index:1;
   background-color:#0022ff;
   z-index: 3;
 }
@@ -446,7 +445,7 @@ TRAINS
   background-color:#cfcfcf;
   opacity: 0.3;
   filter: alpha(opacity=60);
-  z-index:-1;
+  z-index:0;
 }
 
 .antenna2{
@@ -543,7 +542,7 @@ TRAINS
   background-color:#cfcfcf;
   opacity: 0.3;
   filter: alpha(opacity=60);
-  z-index:-1;
+  z-index:0;
 }
 
 .antenna5{
